[tool.poetry]
name = "pricing_toolkit"
version = "0.1.0"
description = "A toolkit for option pricing models"
authors = ["Aakash Agarwal <aakashagarwal778@.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pricing_toolkit"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"